--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "~0.9.0",
     "aws-sdk": "^2.1.35",
+    "bluebird": "^2.9.30",
     "body-parser": "~1.9.0",
     "bower": "~1.3.8",
     "chalk": "~0.5",
@@ -24,6 +25,7 @@
     "consolidate": "~0.10.0",
     "cookie-parser": "~1.3.2",
     "easyimage": "^2.0.3",
+    "ejs": "^2.3.1",
     "express": "~4.10.1",
     "express-session": "~1.9.1",
     "forever": "~0.11.0",
@@ -48,7 +50,8 @@
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
-    "swig": "~1.4.1"
+    "swig": "~1.4.1",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "supertest": "~0.14.0",
